--- a/index.html
+++ b/index.html
@@ -33,8 +33,16 @@
             </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="/imgs/my.jpg" alt="Kong's photo" class='home__avatar'>
+        <h1 class="home__title">Hello,<br> I'm Kong</h1>
+        <h2 class='home__description'>백엔드와 프론트엔드를 넘나드는 웹 개발자 입니다</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
