--- a/index.html
+++ b/index.html
@@ -42,6 +42,54 @@
     </section>
     <!-- About -->
     <section id="about">
+        <h1>About me</h1>
+        <p>
+            웹으로 무엇이든 머리속에 있느 것을 실현하고자 하는 개발자입니다. 시각화하고 누구든지 쉽게 접근이가능한
+            플랫폼은 단연코 웹이 아닌가 싶습니다. 저는 HTML,CSS,JS의 기본기를 익혔고, Python과 연계하여 더 높은
+            수준의 웹 프로그래밍을 해나갈 것입니다.
+        </p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">
+                    HTML,CSS,JavaScript,JQuery
+                </div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-python"></i>
+                </div>
+                <div class="major__title">Tech</div>
+                <div class="major__description">
+                    Python library
+                </div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fas fa-icons"></i>
+                </div>
+                <div class="major__title">Art</div>
+                <div class="major__description">
+                    Adobe programs, Audio, Piano
+                </div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="/imgs/kmu_logo.png" alt="kmu_logo" class='job__logo'>
+                <p class="job__name">게명대학교</p>
+                <p class="job__period">3학년 재학중</p>
+            </div>
+            <div class="job">
+                <img src="/imgs/kmu_logo.png" alt="kmu_logo" class='job__logo'>
+                <p class="job__name">게명대학교</p>
+                <p class="job__period">웹 개발동아리 활동시작~</p>
+            </div>
+            
+        </div>
     </section>
     <!-- Skills -->
     <section id="skills"></section>
