--- a/index.html
+++ b/index.html
@@ -150,7 +150,74 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All <span class='category__count'>8</span></button>
+            <button class="category__btn">Front-end <span class='category__count'>3</span></button>
+            <button class="category__btn">Back-end <span class='category__count'>3</span></button>
+            <button class="category__btn">Mobile <span class='category__count'>2</span></button>
+        </div>
+        <div class="work__projects">
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/100x100" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/100x100" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/100x100" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/100x100" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/100x100" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/100x100" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/100x100" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/100x100" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+        </div>
+    </section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
