--- a/index.html
+++ b/index.html
@@ -219,7 +219,19 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="http://placehold.it/100x100" alt="">
+                <div class="testimonial__speech-bubble">
+                    <p>태민이는 아주 훌륭한 사람이다</p>
+                    <p class="name"><a href="#">고니</a>/samsung</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
 </body>
