--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <img src="/imgs/logo_icon_gray.png" alt="">
+            <img src="/imgs/logo_icon_gray.png" alt="" class='logo_icon'>
             <a href="#">Kong</a>
         </div>
         <div class="navbar__menu">
             <ul class="navbar__menu">
-                <li class="navbar__menu__item">Home</li>
+                <li class="navbar__menu__item active">Home</li>
                 <li class="navbar__menu__item">About</li>
                 <li class="navbar__menu__item">Skills</li>
                 <li class="navbar__menu__item">My work</li>
