--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class='section'>
         <h1>About me</h1>
         <p>
             웹으로 무엇이든 머리속에 있느 것을 실현하고자 하는 개발자입니다. 시각화하고 누구든지 쉽게 접근이가능한
@@ -53,7 +53,7 @@
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">
                     HTML,CSS,JavaScript,JQuery
                 </div>
@@ -62,7 +62,7 @@
                 <div class="major__icon">
                     <i class="fab fa-python"></i>
                 </div>
-                <div class="major__title">Tech</div>
+                <h2 class="major__title">Tech</h2>
                 <div class="major__description">
                     Python library
                 </div>
@@ -71,7 +71,7 @@
                 <div class="major__icon">
                     <i class="fas fa-icons"></i>
                 </div>
-                <div class="major__title">Art</div>
+                <h2 class="major__title">Art</h2>
                 <div class="major__description">
                     Adobe programs, Audio, Piano
                 </div>
@@ -80,19 +80,23 @@
         <div class="about__jobs">
             <div class="job">
                 <img src="/imgs/kmu_logo.png" alt="kmu_logo" class='job__logo'>
-                <p class="job__name">게명대학교</p>
-                <p class="job__period">3학년 재학중</p>
+                <div class="job__description">
+                    <p class="job__name">계명대학교</p>
+                    <p class="job__period">3학년 재학중</p>
+                </div>
+                
             </div>
             <div class="job">
                 <img src="/imgs/kmu_logo.png" alt="kmu_logo" class='job__logo'>
-                <p class="job__name">게명대학교</p>
-                <p class="job__period">웹 개발동아리 활동시작~</p>
-            </div>
+                <div class="job__description">
+                    <p class="job__name">웹 개발 동아리 가입</p>
+                    <p class="job__period">3학년 재학중</p>
+                </div>
             
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class='section'>
         <h1>Skills</h1>
         <h2>Sills & Attribute</h2>
         <p>
@@ -150,7 +154,7 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class='section'>
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -219,7 +223,7 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class='section'>
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -233,7 +237,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class='section'>
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">rhdxoals@gmail.com</h2>
         <div class="contact__links">
