--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about" class='section'>
+    <section id="about" class='section section__container'>
         <h1>About me</h1>
         <p>
             웹으로 무엇이든 머리속에 있느 것을 실현하고자 하는 개발자입니다. 시각화하고 누구든지 쉽게 접근이가능한
@@ -97,61 +97,64 @@
     </section>
     <!-- Skills -->
     <section id="skills" class='section'>
-        <h1>Skills</h1>
-        <h2>Sills & Attribute</h2>
-        <p>
-            나는 웹 개발 천재가 될것입니다
-        </p>
-        <div class="skillset">
-            <div class="skillset__left">
-                <h3 class='skillset__title'>Skills</h3>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>HTML</span>
-                        <span>80%</span>
+        <div class="section__container">
+            <h1>Skills</h1>
+            <h2>Sills & Attribute</h2>
+            <p>
+                나는 웹 개발 천재가 될것입니다
+            </p>
+            <div class="skillset">
+                <div class="skillset__left">
+                    <h3 class='skillset__title'>Skills</h3>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>HTML</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="skill_bar">
+                            <div class="skill__value" style="width: 80%;"></div>
+                        </div>
                     </div>
-                    <div class="skill_bar">
-                        <div class="skill__value"></div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>CSS</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="skill_bar">
+                            <div class="skill__value" style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>JS</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="skill_bar">
+                            <div class="skill__value" style="width: 50%;"></div>
+                        </div>
                     </div>
                 </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>CSS</span>
-                        <span>70%</span>
+                <div class="skillset__right">
+                    <div class="tools">
+                        <h3 class='skillset__title'>Tools</h3>
+                        <ul class="tools__list">
+                            <li><span>VS code</span></li>
+                            <li><span>Visual Studio 2017</span></li>
+                            <li><span>IntelliJ</span></li>
+                        </ul>
                     </div>
-                    <div class="skill_bar">
-                        <div class="skill__value"></div>
+                    <div class="etc">
+                        <h3 class='skillset__title'>Etc</h3>
+                        <ul class="etc__list">
+                            <li><span>Git</span></li>
+                            <li><span>Adobe</span></li>
+                            <li><span>Draw</span></li>
+                        </ul>
                     </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>JS</span>
-                        <span>50%</span>
-                    </div>
-                    <div class="skill_bar">
-                        <div class="skill__value"></div>
-                    </div>
-                </div>
+                </div> 
             </div>
-            <div class="skillset__right">
-                <div class="tools">
-                    <h3 class='skillset__title'>Tools</h3>
-                    <ul class="tools__list">
-                        <li><span>VS code</span></li>
-                        <li><span>Visual Studio 2017</span></li>
-                        <li><span>IntelliJ</span></li>
-                    </ul>
-                </div>
-                <div class="etc">
-                    <h3 class='skillset__title'>Etc</h3>
-                    <ul class="etc__list">
-                        <li><span>Git</span></li>
-                        <li><span>Adobe</span></li>
-                        <li><span>Draw</span></li>
-                    </ul>
-                </div>
-            </div> 
         </div>
+        
     </section>
     <!-- Work -->
     <section id="work" class='section'>
