--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn">All <span class='category__count'>8</span></button>
+            <button class="category__btn active">All <span class='category__count'>8</span></button>
             <button class="category__btn">Front-end <span class='category__count'>3</span></button>
             <button class="category__btn">Back-end <span class='category__count'>3</span></button>
             <button class="category__btn">Mobile <span class='category__count'>2</span></button>
@@ -175,7 +175,21 @@
                 </div>
             </a>
             <a href="https://www.naver.com/" class="project" target="blank">
-                <img src="http://placehold.it/100x100" alt="thumnail">
+                <img src="http://placehold.it/200x300" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/400x400" alt="thumnail">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>English Study</span>
+                </div>
+            </a>
+            <a href="https://www.naver.com/" class="project" target="blank">
+                <img src="http://placehold.it/200x100" alt="thumnail">
                 <div class="project__description">
                     <h3>Youtube Site</h3>
                     <span>English Study</span>
@@ -189,28 +203,14 @@
                 </div>
             </a>
             <a href="https://www.naver.com/" class="project" target="blank">
-                <img src="http://placehold.it/100x100" alt="thumnail">
+                <img src="http://placehold.it/300x150" alt="thumnail">
                 <div class="project__description">
                     <h3>Youtube Site</h3>
                     <span>English Study</span>
                 </div>
             </a>
             <a href="https://www.naver.com/" class="project" target="blank">
-                <img src="http://placehold.it/100x100" alt="thumnail">
-                <div class="project__description">
-                    <h3>Youtube Site</h3>
-                    <span>English Study</span>
-                </div>
-            </a>
-            <a href="https://www.naver.com/" class="project" target="blank">
-                <img src="http://placehold.it/100x100" alt="thumnail">
-                <div class="project__description">
-                    <h3>Youtube Site</h3>
-                    <span>English Study</span>
-                </div>
-            </a>
-            <a href="https://www.naver.com/" class="project" target="blank">
-                <img src="http://placehold.it/100x100" alt="thumnail">
+                <img src="http://placehold.it/500x400" alt="thumnail">
                 <div class="project__description">
                     <h3>Youtube Site</h3>
                     <span>English Study</span>
