--- a/index.html
+++ b/index.html
@@ -233,9 +233,25 @@
             <div class="testimonial">
                 <img src="http://placehold.it/100x100" alt="">
                 <div class="testimonial__speech-bubble">
-                    <p>태민이는 아주 훌륭한 사람이다</p>
+                    <p>태민이는 아주 훌륭한 사람이다태민이는 아주 훌륭한 사람이다
+                        태민이는 아주 훌륭한 사람이다태민이는 아주 훌륭한 사람이다
+                        태민이는 아주 훌륭한 사람이다태민이는 아주 훌륭한 사람이다
+                        태민이는 아주 훌륭한 사람이다태민이는 아주 훌륭한 사람이다
+                    </p>
                     <p class="name"><a href="#">고니</a>/samsung</p>
                 </div>
+            </div>
+            <div class="testimonial">
+               
+                <div class="testimonial__speech-bubble">
+                    <p>태민이는 아주 훌륭한 사람이다
+                        태민이는 아주 훌륭한 사람이다태민이는 아주 훌륭한 사람이다
+                        태민이는 아주 훌륭한 사람이다태민이는 아주 훌륭한 사람이다
+                        태민이는 아주 훌륭한 사람이다
+                    </p>
+                    <p class="name"><a href="#">고니</a>/samsung</p>
+                </div>
+                <img src="http://placehold.it/100x100" alt="">
             </div>
         </div>
     </section>
