--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </div>
         <div class="navbar__menu">
             <ul class="navbar__menu">
-                <li class="navbar__menu__item active">Home</li>
-                <li class="navbar__menu__item">About</li>
-                <li class="navbar__menu__item">Skills</li>
-                <li class="navbar__menu__item">My work</li>
-                <li class="navbar__menu__item">Testimonial</li>
-                <li class="navbar__menu__item">Contact</li>
+                <li class="navbar__menu__item active" data-links='#home'>Home</li>
+                <li class="navbar__menu__item" data-links='#about'>About</li>
+                <li class="navbar__menu__item" data-links='#skills'>Skills</li>
+                <li class="navbar__menu__item" data-links='#work'>My work</li>
+                <li class="navbar__menu__item" data-links='#testimonials'>Testimonial</li>
+                <li class="navbar__menu__item" data-links='#contact'>Contact</li>
             </ul>
         </div>
         <!-- Toggle button -->
