--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
     </nav>
     <!-- Home -->
     <section id="home">
-        <img src="/imgs/my.jpg" alt="Kong's photo" class='home__avatar'>
-        <h1 class="home__title">Hello,<br> I'm Kong</h1>
-        <h2 class='home__description'>백엔드와 프론트엔드를 넘나드는 웹 개발자 입니다</h2>
-        <button class="home__contact">Contact Me</button>
+        <div class="home__container">
+            <img src="/imgs/my.jpg" alt="Kong's photo" class='home__avatar'>
+            <h1 class="home__title">Hello,<br> I'm Kong</h1>
+            <h2 class='home__description'>백엔드와 프론트엔드를 넘나드는 웹 개발자 입니다</h2>
+            <button class="home__contact">Contact Me</button>
+        </div>
     </section>
     <!-- About -->
     <section id="about" class='section section__container'>
