--- a/index.html
+++ b/index.html
@@ -278,5 +278,10 @@
         </div>
         <p class="contact__rights">2020 Kong has all rights reserved </p>
     </section>
+    
+    <!-- Arrow Up -->
+    <button class='arrow-up'>
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 </html>
