JS:work filtering

--- a/index.html
+++ b/index.html
@@ -169,63 +169,63 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active">All <span class='category__count'>8</span></button>
-                <button class="category__btn">Front-end <span class='category__count'>3</span></button>
-                <button class="category__btn">Back-end <span class='category__count'>3</span></button>
-                <button class="category__btn">Mobile <span class='category__count'>2</span></button>
+                <button class="category__btn active" data-filter='*'>All <span class='category__count'>8</span></button>
+                <button class="category__btn" data-filter='apple'>Apple <span class='category__count'>2</span></button>
+                <button class="category__btn" data-filter='platform'>Platform <span class='category__count'>3</span></button>
+                <button class="category__btn" data-filter='hoby'>Hoby <span class='category__count'>3</span></button>
             </div>
             <div class="work__projects">
-                <a href="https://www.naver.com/" class="project" target="blank">
-                    <img src="http://placehold.it/100x100" alt="thumnail">
+                <a href="https://www.naver.com/" class="project" target="blank" data-type='hoby'>
+                    <img src="/imgs/1.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
-                <a href="https://www.naver.com/" class="project" target="blank">
-                    <img src="http://placehold.it/200x300" alt="thumnail">
+                <a href="https://www.naver.com/" class="project" target="blank" data-type='apple'>
+                    <img src="/imgs/2.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
-                <a href="https://www.naver.com/" class="project" target="blank">
-                    <img src="http://placehold.it/400x400" alt="thumnail">
+                <a href="https://www.naver.com/" class="project" target="blank" data-type='apple'>
+                    <img src="/imgs/3.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
-                <a href="https://www.naver.com/" class="project" target="blank">
-                    <img src="http://placehold.it/200x100" alt="thumnail">
+                <a href="https://www.naver.com/" class="project" target="blank" data-type='platform'>
+                    <img src="/imgs/4.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
-                <a href="https://www.naver.com/" class="project" target="blank">
-                    <img src="http://placehold.it/100x100" alt="thumnail">
+                <a href="https://www.naver.com/" class="project" target="blank" data-type='platform'>
+                    <img src="/imgs/6.png" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
-                <a href="https://www.naver.com/" class="project" target="blank">
-                    <img src="http://placehold.it/300x150" alt="thumnail">
+                <a href="https://www.naver.com/" class="project" target="blank" data-type='platform'>
+                    <img src="/imgs/7.png" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
-                <a href="https://www.naver.com/" class="project" target="blank">
-                    <img src="http://placehold.it/500x400" alt="thumnail">
+                <a href="https://www.naver.com/" class="project" target="blank" data-type='hoby'>
+                    <img src="/imgs/8.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
-                <a href="https://www.naver.com/" class="project" target="blank">
-                    <img src="http://placehold.it/100x100" alt="thumnail">
+                <a href="https://www.naver.com/" class="project" target="blank" data-type='hoby'>
+                    <img src="/imgs/10.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
