JS:remove active form nav nad workbtn

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="navbar__menu">
             <ul class="navbar__menu">
-                <li class="navbar__menu__item active" data-links='#home'>Home</li>
+                <li class="navbar__menu__item" data-links='#home'>Home</li>
                 <li class="navbar__menu__item" data-links='#about'>About</li>
                 <li class="navbar__menu__item" data-links='#skills'>Skills</li>
                 <li class="navbar__menu__item" data-links='#work'>My work</li>
@@ -169,7 +169,7 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active" data-filter='*'>All <span class='category__count'>8</span></button>
+                <button class="category__btn selected" data-filter='*'>All <span class='category__count'>8</span></button>
                 <button class="category__btn" data-filter='apple'>Apple <span class='category__count'>2</span></button>
                 <button class="category__btn" data-filter='platform'>Platform <span class='category__count'>3</span></button>
                 <button class="category__btn" data-filter='hoby'>Hoby <span class='category__count'>3</span></button>
