--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/imgs/logo_icon_gray.png">
+    <link rel="icon" type="image/png" href="imgs/logo_icon_gray.png">
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <img src="/imgs/logo_icon_gray.png" alt="" class='logo_icon'>
+            <img src="imgs/logo_icon_gray.png" alt="" class='logo_icon'>
             <a href="#">Kong</a>
         </div>
             <ul class="navbar__menu">
@@ -39,7 +39,7 @@
     <!-- Home -->
     <section id="home">
         <div class="home__container">
-            <img src="/imgs/my.jpg" alt="Kong's photo" class='home__avatar'>
+            <img src="imgs/my.jpg" alt="Kong's photo" class='home__avatar'>
             <h1 class="home__title">Hello,<br> I'm Kong</h1>
             <h2 class='home__description'>백엔드와 프론트엔드를 넘나드는 웹 개발자 입니다</h2>
             <button class="home__contact">Contact Me</button>
@@ -84,7 +84,7 @@
         </div>
         <div class="about__jobs">
             <div class="job">
-                <img src="/imgs/kmu_logo.png" alt="kmu_logo" class='job__logo'>
+                <img src="imgs/kmu_logo.png" alt="kmu_logo" class='job__logo'>
                 <div class="job__description">
                     <p class="job__name">계명대학교</p>
                     <p class="job__period">3학년 재학중</p>
@@ -92,7 +92,7 @@
                 
             </div>
             <div class="job">
-                <img src="/imgs/kmu_logo.png" alt="kmu_logo" class='job__logo'>
+                <img src="imgs/kmu_logo.png" alt="kmu_logo" class='job__logo'>
                 <div class="job__description">
                     <p class="job__name">웹 개발 동아리 가입</p>
                     <p class="job__period">3학년 재학중</p>
@@ -174,56 +174,56 @@
             </div>
             <div class="work__projects">
                 <a href="https://www.naver.com/" class="project" target="blank" data-type='hoby'>
-                    <img src="/imgs/1.jpg" alt="thumnail">
+                    <img src="imgs/1.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
                 <a href="https://www.naver.com/" class="project" target="blank" data-type='apple'>
-                    <img src="/imgs/2.jpg" alt="thumnail">
+                    <img src="imgs/2.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
                 <a href="https://www.naver.com/" class="project" target="blank" data-type='apple'>
-                    <img src="/imgs/3.jpg" alt="thumnail">
+                    <img src="imgs/3.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
                 <a href="https://www.naver.com/" class="project" target="blank" data-type='platform'>
-                    <img src="/imgs/4.jpg" alt="thumnail">
+                    <img src="imgs/4.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
                 <a href="https://www.naver.com/" class="project" target="blank" data-type='platform'>
-                    <img src="/imgs/6.png" alt="thumnail">
+                    <img src="imgs/6.png" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
                 <a href="https://www.naver.com/" class="project" target="blank" data-type='platform'>
-                    <img src="/imgs/7.png" alt="thumnail">
+                    <img src="imgs/7.png" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
                 <a href="https://www.naver.com/" class="project" target="blank" data-type='hoby'>
-                    <img src="/imgs/8.jpg" alt="thumnail">
+                    <img src="imgs/8.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
                     </div>
                 </a>
                 <a href="https://www.naver.com/" class="project" target="blank" data-type='hoby'>
-                    <img src="/imgs/10.jpg" alt="thumnail">
+                    <img src="imgs/10.jpg" alt="thumnail">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>English Study</span>
